# discord-to-rss

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yml
src/: main.rs  text2html.rs
