[package]
name = "discord-to-rss"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
eyre = "0.6.8"
tokio = { version = "1.20.0", features = ["full"] }
serenity = { version = "0.11.2", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "chrono"] }
axum = "0.5.12"
axum-macros = "0.2.3"
ringbuffer = "0.8.4"
atom_syndication = "0.11.0"
clap = { version = "3.2.12", features = ["env", "derive"] }
substring = "1.4.5"
linkify = "0.9.0"