[package]
name = "discord-to-rss"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
eyre = "0.6.8"
tokio = { version = "1.27.0", features = ["full"] }
serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "chrono"] }
axum = "0.6.12"
axum-macros = "0.3.7"
ringbuffer = "0.12.0"
atom_syndication = "0.12.0"
clap = { version = "4.2.1", features = ["env", "derive"] }
substring = "1.4.5"
linkify = "0.9.0"
ammonia = "3.3.0"
tokio-graceful-shutdown = "0.12.1"
